@@ -38,6 +38,7 @@ module Gluon
     attr_writer :plugin_maker
     attr_writer :backend_service_man
     attr_writer :page_cache
+    attr_writer :default_handler
 
     def call(env)
       @logger.debug("#{self}.call() - start") if @logger.debug?
@@ -50,86 +51,95 @@ module Gluon
         @logger.debug("request functions: #{funcs.inspect}")
       end
       page_type, gluon_path_info, gluon_path_args = @url_map.lookup(req.path_info)
+      if (! page_type && @default_handler) then
+        page_type = @default_handler
+        gluon_path_args = []
+      end
       if (page_type) then
-        @session_man.transaction(req, res) {|session|
-          begin
-            case (page_type)
-            when Class
-              controller = page_type.new
-            when Module
-              raise "#{page_type} module is not a page-type."
-            else
-              controller = page_type
-              page_type = controller.class
-            end
-            req.env['gluon.version'] = VERSION
-            req.env['gluon.curr_page'] = page_type
-            req.env['gluon.path_info'] = gluon_path_info
-            req.env['gluon.path_args'] = gluon_path_args
-            req.env['gluon.page_cache'] = @page_cache
-            rs_context = RequestResponseContext.new(req, res, session, @url_map, @renderer)
-            rs_context.logger = @logger
-            rs_context.plugin = @plugin_maker.call
-            rs_context.backend_services = @backend_service_man.call
-            rs_context.cache_tag = nil
-            action = Action.new(controller, rs_context, params, funcs).setup
-            action.logger = @logger
-            page_type = RequestResponseContext.switch_from{
-              cache_key = action.cache_key || @default_cache_key
-              c_key = [ req.path_info, page_type, cache_key ]
-              if (c_entry = @c_lock.synchronize{ @cache[c_key] }) then
-                modified = nil
-                cache_result = nil
-                c_entry[:lock].synchronize{
-                  modified = (action.modified? c_entry[:cache_tag])
-                  cache_result = c_entry[:result]
-                }
-                if (modified) then
-                  @logger.debug("modified page -> #{c_key.inspect}") if @logger.debug?
-                  result = action.apply(gluon_path_args) {
-                    action.view_render
-                  }
-                  if (modified != :no_cache) then
-                    @logger.debug("update page cache -> #{c_key.inspect}") if @logger.debug?
-                    c_entry[:lock].synchronize{
-                      c_entry[:cache_tag] = rs_context.cache_tag
-                      c_entry[:result] = result
-                    }
-                  else
-                    @logger.debug("no cache of #{c_key.inspect}") if @logger.debug?
-                  end
-                  res.write(result)
-                else
-                  @logger.debug("use page cache -> #{c_key.inspect}") if @logger.debug?
-                  res.write(cache_result)
-                end
-              else
+        apply(req, res, params, funcs, page_type, gluon_path_info, gluon_path_args)
+      else
+        [ 404, { "Content-Type" => "text/plain" }, [ "404 Not Found: #{req.env['REQUEST_URI']}" ] ]
+      end
+    end
+
+    def apply(req, res, params, funcs, page_type, gluon_path_info, gluon_path_args)
+      @session_man.transaction(req, res) {|session|
+        begin
+          case (page_type)
+          when Class
+            controller = page_type.new
+          when Module
+            raise "#{page_type} module is not a page-type."
+          else
+            controller = page_type
+            page_type = controller.class
+          end
+          req.env['gluon.version'] = VERSION
+          req.env['gluon.curr_page'] = page_type
+          req.env['gluon.path_info'] = gluon_path_info
+          req.env['gluon.path_args'] = gluon_path_args
+          req.env['gluon.page_cache'] = @page_cache
+          rs_context = RequestResponseContext.new(req, res, session, @url_map, @renderer)
+          rs_context.logger = @logger
+          rs_context.plugin = @plugin_maker.call
+          rs_context.backend_services = @backend_service_man.call
+          rs_context.cache_tag = nil
+          action = Action.new(controller, rs_context, params, funcs).setup
+          action.logger = @logger
+          page_type = RequestResponseContext.switch_from{
+            cache_key = action.cache_key || @default_cache_key
+            c_key = [ req.path_info, page_type, cache_key ]
+            if (c_entry = @c_lock.synchronize{ @cache[c_key] }) then
+              modified = nil
+              cache_result = nil
+              c_entry[:lock].synchronize{
+                modified = (action.modified? c_entry[:cache_tag])
+                cache_result = c_entry[:result]
+              }
+              if (modified) then
+                @logger.debug("modified page -> #{c_key.inspect}") if @logger.debug?
                 result = action.apply(gluon_path_args) {
                   action.view_render
                 }
-                if (@page_cache && rs_context.cache_tag) then
-                  @logger.debug("create page cache -> #{c_key.inspect}") if @logger.debug?
-                  @c_lock.synchronize{
-                    c_entry = @cache[c_key] || { :lock => Mutex.new }
-                    c_entry[:lock].synchronize{
-                      c_entry[:cache_tag] = rs_context.cache_tag
-                      c_entry[:result] = result
-                    }
-                    @cache[c_key] = c_entry
+                if (modified != :no_cache) then
+                  @logger.debug("update page cache -> #{c_key.inspect}") if @logger.debug?
+                  c_entry[:lock].synchronize{
+                    c_entry[:cache_tag] = rs_context.cache_tag
+                    c_entry[:result] = result
                   }
+                else
+                  @logger.debug("no cache of #{c_key.inspect}") if @logger.debug?
                 end
                 res.write(result)
+              else
+                @logger.debug("use page cache -> #{c_key.inspect}") if @logger.debug?
+                res.write(cache_result)
               end
-            }
-          end while (page_type)
-        }
-        @logger.debug("used request parameters: #{params.inspect}")
-        @logger.debug("#{self}.call() - end") if @logger.debug?
-        return res.finish
-      else
-        return [ 404, { "Content-Type" => "text/plain" }, [ "404 Not Found: #{req.env['REQUEST_URI']}" ] ]
-      end
+            else
+              result = action.apply(gluon_path_args) {
+                action.view_render
+              }
+              if (@page_cache && rs_context.cache_tag) then
+                @logger.debug("create page cache -> #{c_key.inspect}") if @logger.debug?
+                @c_lock.synchronize{
+                  c_entry = @cache[c_key] || { :lock => Mutex.new }
+                  c_entry[:lock].synchronize{
+                    c_entry[:cache_tag] = rs_context.cache_tag
+                    c_entry[:result] = result
+                  }
+                  @cache[c_key] = c_entry
+                }
+              end
+              res.write(result)
+            end
+          }
+        end while (page_type)
+      }
+      @logger.debug("used request parameters: #{params.inspect}")
+      @logger.debug("#{self}.call() - end") if @logger.debug?
+      res.finish
     end
+    private :apply
   end
 end
 
